# devops-control-plane

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  first artifact.md  manage.sh  project.yml  pyproject.toml  ruff.toml
.agent/analysis/: FEATURE_GAP_ANALYSIS.md  zero-to-hero-evaluation.md
.agent/artifacts/: ai-failure-postmortem.md  refactoring-plan.md
docs/: ADAPTERS.md  ANALYSIS.md  ARCHITECTURE.md  AUDIT.md  AUDIT_ARCHITECTURE.md  AUDIT_PLAN.md  CONSOLIDATION_AUDIT.md  CONTENT.md  DESIGN.md  DEVELOPMENT.md  DEVOPS_UI_GAP_ANALYSIS.md  DOCUSAURUS_BUILDER_DEEP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS_PLAN.md  INTEGRATION_GAP_ANALYSIS.md  PAGES.md  PAGES_FEATURE_SPEC.md  PAGES_PIPELINE_PLAN.md  PHASE2_PLAN.md  QUICKSTART.md  README.md  STACKS.md  TOOL_INSTALL.md  VAULT.md  WEB_ADMIN.md
k8s/: .wizard-state.json  deployment.yml  service.yml
src/: __init__.py  __main__.py  main.py
tests/: conftest.py  test_adapters.py  test_chat.py  test_ci_detect.py  test_ci_generators.py  test_ci_ops.py  test_cli.py  test_config.py  test_detection.py  test_dns_cdn_actions.py  test_dns_cdn_detect.py  test_docker_detect.py  test_docker_generate.py  test_docker_generators.py  test_e2e.py  test_engine.py  test_helm.py  test_k8s_cluster.py  test_k8s_common.py  test_k8s_detect.py  test_k8s_generate.py  test_k8s_pod_builder.py  test_k8s_validate.py  test_k8s_wizard_detect.py  test_k8s_wizard_generate.py  test_k8s_wizard_persist.py  test_k8s_wizard_translate.py  test_ledger.py  test_models.py  test_observability.py  test_persistence.py  test_reliability.py  test_remediation_coverage.py  test_skaffold.py  test_smoke.py  test_terraform_actions.py  test_terraform_detect.py  test_trace.py  test_vault.py  test_web.py  (+1 more)
(+1538 files in other folders)
